--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,13 @@ dependencies {
     implementation 'androidx.vectordrawable:vectordrawable:1.0.0-beta01'
     implementation 'com.google.android.material:material:1.0.0-rc01'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.google.firebase:firebase-core:16.0.9'
+    implementation 'com.google.firebase:firebase-database:17.0.0'
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+
 }
+
+apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
