--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SettingsActivity"
+            android:name=".settings_activity.SettingsActivity"
             android:label="@string/title_activity_settings"
             android:parentActivityName=".main_activity.MainActivity">
             <meta-data
