--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyAqR8v4NtJN1sc-q2FO4MfsvKClTe_ak_c" />
 
         <activity
             android:name=".detail_activity.MapsActivity"
@@ -44,7 +44,7 @@
             android:name=".main_activity.MainActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustNothing"
-            android:theme="@style/AppTheme.NoActionBar">\
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
